syntax = "proto3";

package si.cea;

import "si-ssh-key/proto/si.ssh_key.proto";
import "si-aws-eks-cluster-runtime/proto/si.aws_eks_cluster_runtime.proto";

enum EntityEventType {
  NOT_SET = 0;
  SSH_KEY = 1;
  AWS_EKS_CLUSTER_RUNTIME = 2;
}

message EntityEvent {
  EntityEventType type = 1;
  oneof entity_event {
    si.ssh_key.EntityEvent ssh_key_event = 1;
    si.aws_eks_cluster_runtime.EntityEvent aws_eks_cluster_runtime_event = 2;
  }
}
